cmake_minimum_required(VERSION 2.6 FATAL_ERROR)

# set default cmake build type to RelWithDebInfo (None Debug Release RelWithDebInfo MinSizeRel)
if (NOT CMAKE_BUILD_TYPE)
	set(CMAKE_BUILD_TYPE RelWithDebInfo CACHE STRING
		"Choose the type of build, options are: None(CMAKE_CXX_FLAGS or CMAKE_C_FLAGS used) Debug Release RelWithDebInfo MinSizeRel."
		FORCE)
endif (NOT CMAKE_BUILD_TYPE)

project(el_client)

include(FindBoost)
include(FindOpenGL)
include(FindThreads)
include(FindZLIB)
include(FindPNG)
include(FindJPEG)
include(FindLibXml2)
include(FindSDL)
include(FindSDL_net)
include(FindSDL_image)
include(FindOpenAL)
include(FindFreetype)
include(FindThreads)
include(FindPkgConfig)
include(CheckCXXCompilerFlag)
include(cmake/FindCal3d.cmake)
include(cmake/FindIconv.cmake)
include(cmake/FindOGG.cmake)
include(cmake/FindVorbis.cmake)
include(cmake/FindVorbisFile.cmake)
include(cmake/FindGLEW.cmake)
include(cmake/FindGLM.cmake)
include(cmake/FindGPA.cmake)
include(cmake/GetGitRevisionDescription.cmake)
include(cmake/PCHSupport.cmake)
include(cmake/CheckSSE.cmake)
include(cmake/FindOpenMP.cmake)
include(cmake/FindMiniZip.cmake)

set(Boost_USE_STATIC_RUNTIME ON)

find_package(Boost 1.40.0 COMPONENTS)

option(BUILD_PCH "Build using precompiled headers" PCHSupport_FOUND)
option(BUILD_TESTS "Build tests" off)
option(BUILD_EDITOR "Build editor for shader sources, needs gtk" off)
option(BUILD_NATIVE "Optimize for native system, use only for private builds" off)
option(BUILD_SSE "Build using optinal SSE support" on)
option(BUILD_MATERIAL_EDITOR "Build editor for materials, needs Qt4" off)
option(BUILD_MAP_EDITOR "Build map editor, needs Qt4" off)
option(BUILD_TERRAIN_TOOL "Build terrain tool" on)
option(BUILD_GPA "Build using GPU Pref API" off)
option(BUILD_OPENMP "Build using OpenMP" off)

if (MSVC)
	CHECK_CXX_COMPILER_FLAG(/arch:SSE2 msvc_sse2)
	CHECK_CXX_COMPILER_FLAG(/fp:fast msvc_fastmath)
	CHECK_CXX_COMPILER_FLAG(-D_SCL_SECURE_NO_WARNINGS msvc_scl_secure)
else (MSVC)
	CHECK_CXX_COMPILER_FLAG(-march=native gcc_native)
	CHECK_CXX_COMPILER_FLAG(-ffast-math gcc_fastmath)
	CHECK_CXX_COMPILER_FLAG(-Wall gcc_wall)
endif (MSVC)

if (${gcc_wall})
	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall")
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
endif (${gcc_wall})

if (${gcc_fastmath})
	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -ffast-math")
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ffast-math")
endif (${gcc_fastmath})

if (${msvc_fpmath})
	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /fp:fast")
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /fp:fast")
endif (${msvc_fpmath})

if (${msvc_scl_secure})
	add_definitions(-D_SCL_SECURE_NO_WARNINGS)
endif (${msvc_scl_secure})

if (${gcc_native} AND (${BUILD_NATIVE} MATCHES "ON"))
	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -march=native")
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native")
endif (${gcc_native} AND (${BUILD_NATIVE} MATCHES "ON"))

if (${HAS_SSE2_EXTENSIONS} AND (${BUILD_SSE} MATCHES "ON"))
	add_definitions(-DUSE_SSE2)
elseif (${HAS_SSE_EXTENSIONS} AND (${BUILD_SSE} MATCHES "ON"))
	add_definitions(-DUSE_SSE)
endif (${HAS_SSE2_EXTENSIONS} AND (${BUILD_SSE} MATCHES "ON"))

if ((${OPENMP_FOUND} MATCHES "TRUE") AND (${BUILD_OPENMP} MATCHES "ON"))
	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
endif ((${OPENMP_FOUND} MATCHES "TRUE") AND (${BUILD_OPENMP} MATCHES "ON"))

include_directories(${CAL3D_INCLUDE_DIR})
include_directories(${OPENGL_INCLUDE_DIR})
include_directories(${Boost_INCLUDE_DIRS})
include_directories(${PNG_INCLUDE_DIR})
include_directories(${JPEG_INCLUDE_DIR})
include_directories(${ZLIB_INCLUDE_DIR})
include_directories(${MINIZIP_INCLUDE_DIRS})
include_directories(${LIBXML2_INCLUDE_DIR})
include_directories(${GLM_INCLUDE_DIR})
include_directories(${ICONV_INCLUDE_DIR})
include_directories(${SDL_INCLUDE_DIR})
include_directories(${GLEW_INCLUDE_PATH})
include_directories(${SDLNET_INCLUDE_DIR})
include_directories(${SDLIMAGE_INCLUDE_DIR})
include_directories(${OPENAL_INCLUDE_DIR})
include_directories(${OGG_INCLUDE_DIR})
include_directories(${VORBIS_INCLUDE_DIR})
include_directories(${VORBISFILE_INCLUDE_DIR})
include_directories(${GLM_INCLUDE_DIR})
include_directories(${FREETYPE_INCLUDE_DIRS})
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/engine)

if ((${GPA_FOUND} MATCHES "TRUE") AND (${BUILD_GPA} MATCHES "ON"))
include_directories(${GPA_INCLUDE_DIR})
endif ((${GPA_FOUND} MATCHES "TRUE") AND (${BUILD_GPA} MATCHES "ON"))

get_git_head_revision(GIT_REFSPEC GIT_SHA1)
git_get_exact_tag(GIT_TAG)

if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
	add_definitions(-DOSX)
elseif (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
	add_definitions(-DLINUX)
elseif (WIN32)
	add_definitions(-DWINDOWS -DWINVER=0x500)
	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mwindows")
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mwindows")
	list(APPEND el_rc_files elc_private.rc)
endif (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")

#add_definitions(-DCLUSTER_INSIDES)
add_definitions(-DCUSTOM_LOOK)
add_definitions(-DCUSTOM_UPDATE)
add_definitions(-DFUZZY_PATHS)
add_definitions(-DNEW_SOUND)
add_definitions(-DPNG_SCREENSHOT)
add_definitions(-DTEXT_ALIASES)
add_definitions(-DUSE_INLINE)
add_definitions(-DBANDWIDTH_SAVINGS)
add_definitions(-DANIMATION_SCALING)
add_definitions(-DENCYCL_NAVIGATION)
add_definitions(-DFSAA)
add_definitions(-DNEW_NEW_CHAR_WINDOW)
add_definitions(-DNEW_TEXTURES)
add_definitions(-DVEGETATION)
add_definitions(-DELC)

if ((${GPA_FOUND} MATCHES "TRUE") AND (${BUILD_GPA} MATCHES "ON"))
add_definitions(-DUSE_GPU_COUNTER)
endif ((${GPA_FOUND} MATCHES "TRUE") AND (${BUILD_GPA} MATCHES "ON"))

if (${CMAKE_BUILD_TYPE} MATCHES "Debug")
	add_definitions(-DDEBUG)
endif (${CMAKE_BUILD_TYPE} MATCHES "Debug")

file(GLOB el_cpp_header_files *.hpp)
file(GLOB el_cpp_files *.cpp)
file(GLOB el_c_header_files *.h)
file(GLOB el_c_files *.c)

#dir io
file(GLOB io_cpp_header_files io/*.hpp)
file(GLOB io_cpp_files io/*.cpp)
file(GLOB io_c_header_files io/*.h)
file(GLOB io_c_files io/*.c)
list(APPEND el_cpp_header_files ${io_cpp_header_files})
list(APPEND el_cpp_files ${io_cpp_files})
list(APPEND el_c_header_files ${io_c_header_files})
list(APPEND el_c_files ${io_c_files})

#dir books
file(GLOB books_c_header_files books/*.h)
file(GLOB books_c_files books/*.c)
list(APPEND el_c_header_files ${books_c_header_files})
list(APPEND el_c_files ${books_c_files})

#dir shader
file(GLOB shader_c_header_files shader/*.h)
file(GLOB shader_c_files shader/*.c)
list(APPEND el_c_header_files ${shader_c_header_files})
list(APPEND el_c_files ${shader_c_files})

#dir fsaa
list(APPEND el_c_header_files fsaa/fsaa.h)
list(APPEND el_c_files fsaa/fsaa.c)
list(APPEND el_c_files fsaa/fsaa_dummy.c)

#dir xml
list(APPEND el_cpp_header_files xml/xmlhelper.hpp)
list(APPEND el_cpp_files xml/xmlhelper.cpp)

#dir exceptions
list(APPEND el_cpp_header_files exceptions/extendedexception.hpp)
list(APPEND el_cpp_files exceptions/extendedexception.cpp)

add_subdirectory(xz)
add_subdirectory(engine)
add_subdirectory(eye_candy)

if (BUILD_EDITOR)
	add_subdirectory(shader_source_editor)
endif (BUILD_EDITOR)

if (BUILD_MATERIAL_EDITOR)
	add_subdirectory(material_editor)
endif (BUILD_MATERIAL_EDITOR)

if (BUILD_MAP_EDITOR)
	add_subdirectory(new_map_editor)
endif (BUILD_MAP_EDITOR)

if (BUILD_TERRAIN_TOOL)
	add_subdirectory(terrain_tool)
endif (BUILD_TERRAIN_TOOL)

if (BUILD_TESTS)
	add_subdirectory(tests)
endif (BUILD_TESTS)

add_executable(el_client WIN32 ${el_cpp_header_files}
	${el_cpp_files} ${el_c_header_files} ${el_c_files} ${el_rc_files})

target_link_libraries(el_client ${GLEW_LIBRARY})
target_link_libraries(el_client ${OPENGL_LIBRARIES})
target_link_libraries(el_client ${CAL3D_LIBRARIES})
target_link_libraries(el_client ${JPEG_LIBRARIES})
target_link_libraries(el_client ${PNG_LIBRARIES})
#target_link_libraries(el_client ${Boost_LIBRARIES})
target_link_libraries(el_client ${ICONV_LIBRARIES})
target_link_libraries(el_client ${LIBXML2_LIBRARIES})
target_link_libraries(el_client ${SDL_LIBRARY})
target_link_libraries(el_client ${SDLNET_LIBRARY})
target_link_libraries(el_client ${SDLIMAGE_LIBRARY})
target_link_libraries(el_client ${OPENAL_LIBRARY})
target_link_libraries(el_client ${OGG_LIBRARY})
target_link_libraries(el_client ${VORBIS_LIBRARY})
target_link_libraries(el_client ${VORBISFILE_LIBRARY})
target_link_libraries(el_client ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(el_client eye_candy)
target_link_libraries(el_client elengine)
target_link_libraries(el_client xz)
target_link_libraries(el_client ${ZLIB_LIBRARIES})
target_link_libraries(el_client ${MINIZIP_LIBRARIES})
if ((${OPENMP_FOUND} MATCHES "TRUE") AND (${BUILD_OPENMP} MATCHES "ON"))
target_link_libraries(el_client ${OpenMP_LIB})
endif ((${OPENMP_FOUND} MATCHES "TRUE") AND (${BUILD_OPENMP} MATCHES "ON"))

set_target_properties(el_client PROPERTIES COMPILE_DEFINITIONS EL2_DATA_DIR="${CMAKE_CURRENT_SOURCE_DIR}/data")

if ((${GPA_FOUND} MATCHES "TRUE") AND (${BUILD_GPA} MATCHES "ON"))
target_link_libraries(el_client ${GPA_LIBRARY})
endif ((${GPA_FOUND} MATCHES "TRUE") AND (${BUILD_GPA} MATCHES "ON"))
